# Digi-Office

./: .gitignore  PHASE1B_REPORT.md  PHASE1_STATUS.md  PHASE2_STATUS.md  README.md  ciphemon_agent.py  prototype_sleep_embedder.py  pyproject.toml  sleep_coordinator_agent.py  train_alpha_context.py  train_alpha_scalar.py  train_w_consolidate.py  train_w_consolidate_v2.py
.github/workflows/: ci.yml
data/: alpha_context.json  alpha_scalar.json  phase1b_v2_results.json  sleep_multi_hop_test.json  sleep_phase1_results.json  w_consolidate_trained.npy  w_consolidate_v2.npy
docs/: COORDINATION_PROTOCOL.md  LLM_SLEEP_INTEGRATION_PLAN.md  PLANNER_PROMPT.md
scripts/claude_hooks/: digi_report.py
src/digi_office/: VALIDATION_REPORT.md
src/digi_office/agent_sdk/: __init__.py  agent.py
src/digi_office/coordinator/: db.py  routing.py  server.py  worker_proxy.py
src/digi_office/deploy/: ai.openclaw.digi-office.plist  ciphemon_agent.py  digi-office.agent.plist  digi-office.service  hermes-agent.service  hermes_agent.py  setup_ciphemon.sh  setup_hermes.sh
src/digi_office/docs/: SETUP.md  SPRITES.md
src/digi_office/static/: dashboard.html  index.html  office.html  sprite_preview.html
src/digi_office/static/docs/: PLANNER_PROMPT.md
src/digi_office/static/sprites/: README.md  generate_sheets.py  sprite_generator_procedural.py  sprites.json
src/digi_office/tests/: test_coordination.py  test_smoke.py
src/digi_office/workers/: revalomon_worker.py
